--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 permalink:           :slug/
 
 # Setup
-title:               NFN International - Breaking news, world news, weather
+title:               NFN World News - Breaking News, World News, Entertainment News
 tagline:             Nice Fake News
 description:         "Fake news has torn our world apart, so now fake news must mend it."
 footer:              Oli Frost
