--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ permalink:           :slug/
 # Setup
 title:               NFN World News - Breaking News, World News, Entertainment News
 tagline:             Nice Fake News
-description:         "Fake news has torn our world apart, so now fake news must mend it."
+description:         "NFN is a Nice Fake News site, created by Russian hackers."
 footer:              Oli Frost
 logo:                /img/nfn-preview.png
 tags:
