--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ permalink:           :slug/
 # Setup
 title:               NFN World News - Breaking News, World News, Entertainment News
 tagline:             Nice Fake News
-description:         "NFN is a Nice Fake News site, created by Russian hackers."
+description:         "NFN is a Nice Fake News site created by Russian hackers. We share only the most heart-warming and inspiring lies. And seed them by whatever means necessary…"
 footer:              Oli Frost
 logo:                /img/nfn-preview.png
 tags:
