--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 permalink:           :slug/
 
 # Setup
-title:               NFN World News - Breaking News, World News, Entertainment News
+title:               NFN World News - Breaking News, World News, Entertainment
 tagline:             Nice Fake News
 description:         "NFN is a Nice Fake News site created by Russian hackers. We share only the most heart-warming and inspiring lies. And seed them by whatever means necessary…"
 footer:              Oli Frost
